# hello-world

ML算法/: watermelon.txt  周志华书参考答案.txt  西瓜数据3.0.txt
TLD/: TLD PPT.ppt
TLD/Linux-TLD/include/: TLD.h
TLD/Linux-TLD/src/: CMakeLists.txt  LKTracker.cpp  TLD.cpp  run_tld.cpp
TLD/Windows-TLD/TLD_v1/: TLD_v1.sln
TLD/Windows-TLD/TLD_v1/TLD_v1/: Classifier.cpp  Classifier.h  PatchGenerator.cpp  PatchGenerator.h  TLD.cpp  TLD.h  TLD_v1.vcxproj  TLD_v1.vcxproj.filters  Track.cpp  Track.h  help.h  main.cpp
TLD/Windows-TLD/TLD_v1/TLD_v1/Debug/: vc141.idb
TLD/Windows-TLD/TLD_v1/TLD_v1/Debug/TLD_v1.tlog/: CL.command.1.tlog  TLD_v1.lastbuildstate
TLD/Windows-TLD/TLD_v1/TLD_v1/x64/Debug/: vc141.idb
TLD/Windows-TLD/TLD_v1/TLD_v1/x64/Debug/TLD_v1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TLD_v1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
TLD/Windows-TLD/TLD_v1/x64/Debug/: TLD_v1.ilk
数据采集器/demo-1.0.0-Source/: CMakeLists.txt  License.txt  数据采集器.xlsx
数据采集器/demo-1.0.0-Source/include/data_collector/: AbstractActivities.h  AbstractActivityRecognition.h  AbstractDeviceInformation.h  AbstractSystemInformation.h  ConcreteActivities.h  ConcreteActivityRecognition.h  ConcreteDeviceInformation.h  ConcreteSystemInformation.h  CpuInfo.h  DataCollector.h  FileWatcher.h  HjsMethod.h  TaskPool.h  ZxMethod.h
数据采集器/demo-1.0.0-Source/include/data_transmitter/: DataTransmitter.h
数据采集器/demo-1.0.0-Source/include/utils/: Client.h  Help.h
数据采集器/demo-1.0.0-Source/src/: main.cpp
数据采集器/demo-1.0.0-Source/src/data_collector/: ConcreteActivities.cpp  ConcreteActivityRecognition.cpp  ConcreteDeviceInformation.cpp  ConcreteSystemInformation.cpp  CpuInfo.cpp  DataCollector.cpp  FileWatcher.cpp  HjsMethod.cpp  TaskPool.cpp  ZxMethod.cpp
数据采集器/demo-1.0.0-Source/src/data_transmitter/: DataTransmitter.cpp
数据采集器/demo-1.0.0-Source/src/utils/: Client.cpp
数据采集器/file_watcher/: CMakeLists.txt  pc.cmake
数据采集器/file_watcher/include/: FileWatcher.h
数据采集器/file_watcher/src/: main.cpp
